feat: add profile image removing; move admin's login to the .env file
